--- a/assets/style.css
+++ b/assets/style.css
@@ -99,7 +99,7 @@ section {
 footer {
     background-color: #040D12;
     color: white;
-    height: 500px;
+    height: 650px;
 }
 
 .input-group {
@@ -350,6 +350,55 @@ input[type="file"] {
 .submit-button button:hover {
     background-color: rgba(255, 255, 255, 0.2);
 }
+/* Custom alert styling */
+.alert-box {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    z-index: 1000;
+}
+
+.alert-box.active {
+    display: block;
+}
+
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.overlay.active {
+    display: block;
+}
+
+.alert-close {
+    cursor: pointer;
+    margin-top: 10px;
+    color: #ff3b3b;
+}
+.hover-effect {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    border-radius: 10px;
+}
+
+.hover-effect:hover {
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(22, 21, 21, 0.226);
+}
+
 
 /* Media Queries for responsivenes */
 @media (max-width: 500px) and (min-width: 300px) {
@@ -393,6 +442,11 @@ input[type="file"] {
         left: 65%;
         top: 30%;
     }
+    .marqesdis{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 @media (min-width: 992px) {
@@ -419,42 +473,3 @@ input[type="file"] {
     background-color: #040D12;
 }
 
-/* Custom alert styling */
-.alert-box {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.8);
-    color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    z-index: 1000;
-}
-
-.alert-box.active {
-    display: block;
-}
-
-.overlay {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-}
-
-.overlay.active {
-    display: block;
-}
-
-.alert-close {
-    cursor: pointer;
-    margin-top: 10px;
-    color: #ff3b3b;
-}
